--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,6 @@ metaDataFormat = "yaml"
   homeTitle = "札記" 
   subtitle = "爛筆頭幹掉好記性"
   mainSections = ["post","posts"]
-#  logo = "img/avatar-icon.png" 
   logo = "images/avatar.png" 
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
@@ -21,7 +20,7 @@ metaDataFormat = "yaml"
   comments = true
   readingTime = true
   wordCount = true
-#  useHLJS = true
+  useHLJS = true
   socialShare = true
   delayDisqus = true
   showRelatedPosts = true
